refactor: 코드 수정.
- 스트림에서 collect(Collectors.toList())를 단순한 toList()로 변경.